# Cpp_Constexpr_TypeErasure

./: .gitignore  README.md
constexpr_function_test/: CMakeLists.txt  source.cpp
include/: constexpr_any.h  constexpr_function.h
tests/: CMakeLists.txt
tests/constexpr_any/: CMakeLists.txt  source.cpp
tests/constexpr_function/: CMakeLists.txt  source.cpp
