################################################################################
### Project name
################################################################################
project(constexpr_any)

set(SOURCES "source.cpp")

################################################################################
### Add build target
################################################################################
add_executable(${PROJECT_NAME} ${SOURCES})
