################################################################################
### Project name
################################################################################
project(constexpr_function)

set(SOURCES "source.cpp")

################################################################################
### Add build target
################################################################################
add_executable(${PROJECT_NAME} ${SOURCES})
